<?xml version="1.0"?>
<package>
  <name>config</name>
  <version>0.1.0</version>
  <description>config</description>

  <maintainer email="ronghou.ha@outlook.com">ha</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
