<?xml version="1.0"?>
<package>
  <name>gp_loader</name>
  <version>0.1.0</version>
  <description>loader_node</description>
  <maintainer email="ronghou.ha@outlook.com">Ha</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>


  <export>
  </export>
  
</package>
