<?xml version="1.0"?>
<package>
  <name>map_manager</name>
  <version>0.1.0</version>
  <description>new package</description>
  <maintainer email="ronghou.ha@outlook.com">Ha</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend> 
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
  </export>
  
</package>
