<?xml version="1.0"?>
<package>
  <name>obstacle_manager</name>
  <version>0.1.0</version>
  <description>new package</description>
  <maintainer email="ronghou.ha@outlook.com">Ha</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl</run_depend>  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>laser_geometry</run_depend>


  <export>
  </export>
  
</package>
